--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,9 @@
         
         <ul class="portfolio-list list">
           <li class="portfolio-item">
+            
             <a href="" class="portfolio-link">
+              <div class="portfolio-thumb">
               <img
                 src="./images/portfolio-img1.jpg"
                 alt="веб сайт Технокряк"
@@ -72,6 +74,10 @@
                 height="294"
                 class="services-img"
               />
+              <p class="thumb-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+
+              </p>
+              </div>
               <div class="container-services-img">
               <h2 class="portfolio-title">Технокряк</h2>
               <p class="portfolio-text">Веб-сайт</p>
@@ -80,6 +86,7 @@
           </li>
           <li class="portfolio-item">
             <a href="" class="portfolio-link">
+              <div class="portfolio-thumb">
               <img
                 src="./images/portfolio-img2.jpg"
                 alt="Постер Нового Орлеана"
@@ -87,6 +94,10 @@
                 height="294"
                 class="services-img"
               />
+              <p class="thumb-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+
+              </p>
+            </div>
               <div class="container-services-img">
               <h2 class="portfolio-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
               <p class="portfolio-text">Дизайн</p>
@@ -95,6 +106,7 @@
           </li>
           <li class="portfolio-item">
             <a href="" class="portfolio-link">
+              <div class="portfolio-thumb">
               <img
                 src="./images/portfolio-img3.jpg"
                 alt="Ресторан морской еды"
@@ -102,6 +114,10 @@
                 height="294"
                 class="services-img"
               />
+              <p class="thumb-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+
+              </p>
+            </div>
               <div class="container-services-img">
               <h2 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
               <p class="portfolio-text">Приложение</p>
@@ -110,6 +126,7 @@
           </li>
           <li class="portfolio-item">
             <a href="" class="portfolio-link">
+              <div class="portfolio-thumb">
               <img
                 src="./images/portfolio-img4.jpg"
                 alt="проект прайм"
@@ -117,6 +134,10 @@
                 height="294"
                 class="services-img"
               />
+              <p class="thumb-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+
+              </p>
+            </div>
               <div class="container-services-img">
               <h2 class="portfolio-title">Проект <span lang="en">Prime</span></h2>
               <p class="portfolio-text">Маркетинг</p>
@@ -125,6 +146,7 @@
           </li>
           <li class="portfolio-item">
             <a href="" class="portfolio-link">
+              <div class="portfolio-thumb">
               <img
                 src="./images/portfolio-img5.jpg"
                 alt="проект боксу"
@@ -132,6 +154,10 @@
                 height="294"
                 class="services-img"
               />
+              <p class="thumb-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+
+              </p>
+            </div>
               <div class="container-services-img">
               <h2 class="portfolio-title">Проект <span lang="en">Boxes</span></h2>
               <p class="portfolio-text">Приложение</p>
@@ -140,6 +166,7 @@
           </li>
           <li class="portfolio-item">
             <a href="" class="portfolio-link">
+              <div class="portfolio-thumb">
               <img
                 src="./images/portfolio-img6.jpg"
                 alt="проект веб-сайту"
@@ -147,6 +174,10 @@
                 height="294"
                 class="services-img"
               />
+              <p class="thumb-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+
+              </p>
+            </div>
               <div class="container-services-img">
               <h2 lang="en" class="portfolio-title">Inspiration has no Borders</h2>
               <p class="portfolio-text">Веб-сайт</p>
@@ -155,6 +186,7 @@
           </li>
           <li class="portfolio-item">
             <a href="" class="portfolio-link">
+              <div class="portfolio-thumb">
               <img
                 src="./images/portfolio-img7.jpg"
                 alt="Дизайн издания"
@@ -162,6 +194,10 @@
                 height="294"
                 class="services-img"
               />
+              <p class="thumb-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+
+              </p>
+            </div>
               <div class="container-services-img">
               <h2 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h2>
               <p class="portfolio-text">Дизайн</p>
@@ -170,6 +206,7 @@
           </li>
           <li class="portfolio-item">
             <a href="" class="portfolio-link">
+              <div class="portfolio-thumb">
               <img
                 src="./images/portfolio-img8.jpg"
                 alt="проект ЛАБ"
@@ -177,6 +214,10 @@
                 height="294"
                 class="services-img"
               />
+              <p class="thumb-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+
+              </p>
+            </div>
               <div class="container-services-img">
               <h2 class="portfolio-title">Проект <span lang="en">LAB</span></h2>
               <p class="portfolio-text">Маркетинг</p>
@@ -185,6 +226,7 @@
           </li>
           <li class="portfolio-item">
             <a href="" class="portfolio-link">
+              <div class="portfolio-thumb">
               <img
                 src="./images/portfolio-img9.jpg"
                 alt="проект ЛАБ"
@@ -192,6 +234,10 @@
                 height="294"
                 class="services-img"
               />
+              <p class="thumb-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+
+              </p>
+            </div>
               <div class="container-services-img">
               <h2 lang="en" class="portfolio-title">Growing Business</h2>
               <p class="portfolio-text">Приложение</p>
