--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <script src="./js/modal.js"></script>
   </head>
   <body>
     <!-- Хедер -->
@@ -67,7 +68,7 @@
                 Эффективные решения <br />
                 для вашего бизнеса
               </h1>
-              <button type="button" class="hero-btn">Заказать услугу</button>
+              <button type="button" class="hero-btn" data-modal-open>Заказать услугу</button>
             </div>
       </section>
 
@@ -136,15 +137,20 @@
           <h2 class="work-title">Чем мы занимаемся</h2>
           <ul class="work-list list">
             <li class="work-item">
-              <img
+              <div class="work-thumb">
+                <img
                 src="./images/box1.jpg"
                 alt="работа за клавиатурой"
                 width="370"
                 height="294"
                 class="work-img"
               />
+              <p class="work-thumb-title">Десктопные приложения</p>
+            </div>
+            
             </li>
             <li class="work-item">
+              <div class="work-thumb">
               <img
                 src="./images/box2.jpg"
                 alt="работа за ноутбуком"
@@ -152,8 +158,11 @@
                 height="294"
                 class="work-img"
               />
-            </li>
+              <p class="work-thumb-title">Мобильные приложения</p>
+            </div>
+          </li>
             <li class="work-item">
+              <div class="work-thumb">
               <img
                 src="./images/box3.jpg"
                 alt="работа за планшетом"
@@ -161,6 +170,8 @@
                 height="294"
                 class="work-img"
               />
+              <p class="work-thumb-title">Дизайнерские решения</p>
+            </div>
             </li>
           </ul>
         </div>
@@ -458,5 +469,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="btn-icon" data-modal-close>
+        <svg class="modal-icon" width="18" height="18">
+          <use href="./images/icons.svg#icon-close-black"></use>
+        </svg>
+      </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
