--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,6 @@
         
         <ul class="portfolio-list list">
           <li class="portfolio-item">
-            
             <a href="" class="portfolio-link">
               <div class="portfolio-thumb">
               <img
@@ -74,9 +73,10 @@
                 height="294"
                 class="services-img"
               />
-              <p class="thumb-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
-
+              <div class="portfolio-overlay">           
+              <p class="portfolio-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
               </p>
+            </div>
               </div>
               <div class="container-services-img">
               <h2 class="portfolio-title">Технокряк</h2>
@@ -94,10 +94,12 @@
                 height="294"
                 class="services-img"
               />
-              <p class="thumb-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+              <div class="portfolio-overlay"> 
+              <p class="portfolio-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
 
               </p>
             </div>
+              </div>
               <div class="container-services-img">
               <h2 class="portfolio-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
               <p class="portfolio-text">Дизайн</p>
@@ -114,10 +116,12 @@
                 height="294"
                 class="services-img"
               />
-              <p class="thumb-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+              <div class="portfolio-overlay"> 
+              <p class="portfolio-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
 
               </p>
             </div>
+              </div>
               <div class="container-services-img">
               <h2 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
               <p class="portfolio-text">Приложение</p>
@@ -134,10 +138,12 @@
                 height="294"
                 class="services-img"
               />
-              <p class="thumb-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+              <div class="portfolio-overlay"> 
+              <p class="portfolio-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
 
               </p>
             </div>
+              </div>
               <div class="container-services-img">
               <h2 class="portfolio-title">Проект <span lang="en">Prime</span></h2>
               <p class="portfolio-text">Маркетинг</p>
@@ -154,10 +160,12 @@
                 height="294"
                 class="services-img"
               />
-              <p class="thumb-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+              <div class="portfolio-overlay"> 
+              <p class="portfolio-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
 
               </p>
             </div>
+              </div>
               <div class="container-services-img">
               <h2 class="portfolio-title">Проект <span lang="en">Boxes</span></h2>
               <p class="portfolio-text">Приложение</p>
@@ -174,7 +182,8 @@
                 height="294"
                 class="services-img"
               />
-              <p class="thumb-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+              <div class="portfolio-overlay"> 
+              <p class="portfolio-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
 
               </p>
             </div>
@@ -182,6 +191,7 @@
               <h2 lang="en" class="portfolio-title">Inspiration has no Borders</h2>
               <p class="portfolio-text">Веб-сайт</p>
             </div>
+              </div>
             </a>
           </li>
           <li class="portfolio-item">
@@ -194,10 +204,12 @@
                 height="294"
                 class="services-img"
               />
-              <p class="thumb-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+              <div class="portfolio-overlay"> 
+              <p class="portfolio-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
 
               </p>
             </div>
+              </div>
               <div class="container-services-img">
               <h2 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h2>
               <p class="portfolio-text">Дизайн</p>
@@ -214,10 +226,12 @@
                 height="294"
                 class="services-img"
               />
-              <p class="thumb-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+              <div class="portfolio-overlay"> 
+              <p class="portfolio-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
 
               </p>
             </div>
+              </div>
               <div class="container-services-img">
               <h2 class="portfolio-title">Проект <span lang="en">LAB</span></h2>
               <p class="portfolio-text">Маркетинг</p>
@@ -234,10 +248,12 @@
                 height="294"
                 class="services-img"
               />
-              <p class="thumb-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+              <div class="portfolio-overlay"> 
+              <p class="portfolio-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
 
               </p>
             </div>
+              </div>
               <div class="container-services-img">
               <h2 lang="en" class="portfolio-title">Growing Business</h2>
               <p class="portfolio-text">Приложение</p>
